[package]
name = "ethereum-transaction-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
tower = { version = "0.4.13", features = ["limit"] }
axum = "0.6.18"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
anyhow = "1.0.71"
futures = "0.3.28"